--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo.png" id="plogo"/>
+            <img src="logo.png" id="plogo"/>
             <ul id="sidemenu">
                 <li><a href="#header"style="--i:1">Home</a></li>
                 <li><a href="#about"style="--i:2">About</a></li>
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/user (1).png">
+                <img src="iuser (1).png">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About me</h1>
