--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="iuser (1).png">
+                <img src="user (1).png">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About me</h1>
